header-hero fix z-index
пофиксил работу z-index . Проблемы в прдыдущем сообщении описаны.

--- a/src/sass/blocks/_hero.scss
+++ b/src/sass/blocks/_hero.scss
@@ -23,6 +23,8 @@
 }
 
 .hero-box {
+  position: relative;
+  z-index: 9;
   display: flex;
   flex-direction: column;
   &__container {
